# ChangeLog for media-sound/alsa-headers
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-headers/ChangeLog,v 1.170 2009/05/06 17:48:39 beandog Exp $

*alsa-headers-1.0.20 (06 May 2009)

  06 May 2009; Steve Dibb <beandog@gentoo.org> +alsa-headers-1.0.20.ebuild:
  Version bump

  31 Mar 2009; Raúl Porcel <armin76@gentoo.org> alsa-headers-1.0.16.ebuild,
  alsa-headers-1.0.17.ebuild:
  arm/sh stable

  17 Mar 2009; Doug Goldstein <cardoe@gentoo.org>
  alsa-headers-1.0.18.ebuild:
  mark amd64 stable

*alsa-headers-1.0.19 (19 Jan 2009)

  19 Jan 2009; <chainsaw@gentoo.org> +alsa-headers-1.0.19.ebuild:
  Version bump. The ChangeLog may interest you, which you can find here:
  http://www.alsa-project.org/main/index.php/Changes_v1.0.18_v1.0.19

  22 Dec 2008; Raúl Porcel <armin76@gentoo.org> alsa-headers-1.0.17.ebuild:
  ia64 stable wrt #245517

  21 Dec 2008; nixnut <nixnut@gentoo.org> alsa-headers-1.0.17.ebuild:
  Stable on ppc wrt bug 245517

  20 Dec 2008; Ferris McCormick <fmccor@gentoo.org>
  alsa-headers-1.0.17.ebuild:
  Sparc stable, Bug #245517.

  20 Dec 2008; Thomas Anderson <gentoofan23@gentoo.org>
  alsa-headers-1.0.17.ebuild:
  stable amd64, bug 245517

  16 Dec 2008; Jeroen Roovers <jer@gentoo.org> alsa-headers-1.0.17.ebuild:
  Stable for HPPA (bug #245517).

  15 Dec 2008; <ssuominen@gentoo.org> alsa-headers-1.0.17.ebuild:
  x86 stable wrt #245517

  12 Dec 2008; Tobias Klausmann <klausman@gentoo.org>
  alsa-headers-1.0.17.ebuild, alsa-headers-1.0.18.ebuild:
  Brainfart during stabilization for bug #245517, going back to .17 for
  stable on alpha

  12 Dec 2008; Brent Baude <ranger@gentoo.org> alsa-headers-1.0.17.ebuild:
  Marking alsa-headers-1.0.17 ppc64 for bug 245517

  11 Dec 2008; Tobias Klausmann <klausman@gentoo.org>
  alsa-headers-1.0.18.ebuild:
  Stable on alpha, bug #245517

*alsa-headers-1.0.18 (11 Nov 2008)
