@@ -4,10 +4,10 @@ DIST alsa-driver-1.0.17.tar.bz2 2725803 RMD160 e9e33ef8be8d808c66cc93e6bf124d166
 DIST alsa-driver-1.0.18.tar.bz2 2817277 RMD160 abcfa3258a2633f8b5fb466628f83f02d92392f8 SHA1 f1130e5c6cd1fecb403ea352cabd7135e1a61ac5 SHA256 46f0f8aa27920190c35cc276af4064e2bec55c867b590de91039ef455a7c8bfd
 DIST alsa-driver-1.0.19.tar.bz2 2896328 RMD160 cd86ccf8477f8f8be7887c332d33a4e4cfef2d9a SHA1 93305af07e9855c0c7ec01653e54c3253970da3f SHA256 10fb9b456cc38cdf6f708aac11c173d681b7edea4bb260e8d24a22f07ac76f8e
 DIST alsa-driver-1.0.20.tar.bz2 2900799 RMD160 33aaed9ab466827b7e543d45f137a0b38ba7ff61 SHA1 b72678d625053bff3de922f211a969ae90544f66 SHA256 e831852f1e50b50e13667b126a65064282218e0ad130dce7fdeb614314cee626
-EBUILD alsa-headers-1.0.16.ebuild 989 RMD160 686d392fd81a51f7e4009ca7b7f00d02f4952da1 SHA1 3b50000f278f2274e704c4b98a28cd117906632f SHA256 7ec38ec6033c29c6e1113f1d5703c40fcce4fc263045e0b02ac40de89206787e
-EBUILD alsa-headers-1.0.17.ebuild 980 RMD160 609ed391a2d40c00c9fda06f6edb9daddfbde408 SHA1 c321e6489776edc3dc9911ebe5ddb8f34c80379b SHA256 ca1fe8bbd54ed8332db540ff61b82853479995dd427b7524d1e1a71d7e97e48d
-EBUILD alsa-headers-1.0.18.ebuild 980 RMD160 44d07baad2ee10165be1e1ac8e20b0825035b3c6 SHA1 1bb81441249545e1b97ba97bc1d2c38175d0bce3 SHA256 e2a470805f2e2a9230678a97874b4ac89b0783016164c7f00a49b63a5e3514f1
-EBUILD alsa-headers-1.0.19.ebuild 982 RMD160 0d53085baeb30134373d4da00f074b2e55772290 SHA1 0d94ec51527ad72bddcc2b114c12fea98fb22a8a SHA256 a60ff164525c926a366af3ecf5b4d56baf69f7a85919a10665124e7d4508b04a
-EBUILD alsa-headers-1.0.20.ebuild 992 RMD160 4b95b42169fd1be03302ed8470f74cfc2c601dfa SHA1 9280d3fd02129e626c2ada685f85084a91170c7a SHA256 7b52d7a343ecdd0f67f56731787d2863c3054aa0d1cc2c8f108c9311678791a5
-MISC ChangeLog 22857 RMD160 998f2e9fb5231c9da548df123e8dfc693b770e4b SHA1 5ba15acfea1f1d3dd2d1054ce2f910300139dd72 SHA256 1061760265e1d402559f4dfd73f09871cf7199ca8510c17e34ac95dc80ee831c
+EBUILD alsa-headers-1.0.16.ebuild 1000 RMD160 058d43dc855dab2dcf88eef54ad4479c3e50818f SHA1 b1e016ea66a15a02aaf50369c4e6a777793a0745 SHA256 cc626b15ca5346dca20cb6560936611e96244bb256c92c35afc4a0cc1d294a3a
+EBUILD alsa-headers-1.0.17.ebuild 991 RMD160 8512118b790e1927a5321fc51d954024863e1b14 SHA1 16c49fe93b719542bfb4b0ebba59afba807f4fd2 SHA256 24abd4e56c50edfcce814653bb6ee8dfb8c060e517094f7a6ab3177a5714918d
+EBUILD alsa-headers-1.0.18.ebuild 992 RMD160 d3483839b357f3958ad47132f100713153649889 SHA1 23e35a6d2120a3429a3311fb6d38bf573e308d7d SHA256 b202ff5fa08993308df46358fedef75a8d83adf8ea8039f2234fd85af684de46
+EBUILD alsa-headers-1.0.19.ebuild 992 RMD160 367e7570dc6436905b2a2c36732ef752149f01ec SHA1 7c56839f36d2de743bc6c581041a3e049fc14883 SHA256 b206eb6622537540a17fd5b064982cb94382f3ff6c4167a0eaddac0c8556cac7
+EBUILD alsa-headers-1.0.20.ebuild 1003 RMD160 4540d2ddd3795024fa172c29ef37f48ee2119d05 SHA1 0c413cb30b697dbbb2fe934279d2ae46ae9b62df SHA256 6cc0d8dee5b0d0ea166bddc0c341e9ef1ce5f3b36260c7a140c8a499fe415ef4
+MISC ChangeLog 23014 RMD160 c87995d62085ea64761b81d965ecac9020c0fc55 SHA1 307b35dd6d465e1d0059ccc8f99c9e2aaccfb473 SHA256 1ec2e96823d362e96c5c43dc265d2a633e2c1854e1259815ecb8469f317e56c1
 MISC metadata.xml 220 RMD160 e49f8bb330d1798cd2c8ee5335cef1784f0d7ccb SHA1 1b895fe6cae4b8eab08ba1a6a1212baf4b4b4105 SHA256 8570ef11cd59b0d8edb71e78eecaec423616836b10eacb86bee0de941f0ae054
