@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/alsa-headers
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-headers/ChangeLog,v 1.170 2009/05/06 17:48:39 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/alsa-headers/ChangeLog,v 1.171 2009/06/02 17:13:25 beandog Exp $
+
+  02 Jun 2009; Steve Dibb <beandog@gentoo.org> alsa-headers-9999.ebuild:
+  Update live ebuild to use git; Thanks to Alexey Charkov for ebuild, bug
+  231490
 
 *alsa-headers-1.0.20 (06 May 2009)
 
